src/css.css
/* ... */
.player .track-progress-bar-container, .player .player-controls {
	display: inline-flex;
}

.player .track-title {
	flex: auto;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.player .track-progress-bar {
	background: #888;
	border-radius: 2px;
	cursor: pointer;
	display: inline-block;
	height: 5px;
}

.player .track-progress-bar .track-progress {
	background: #ececec;
	border-radius: inherit;
	height: 100%;
	width: 22%;
}

.player .track-progress-bar .track-progress {
	color: #ececec;
}

.player .player-controls a {border-left: 1px solid #555;}

/*.player .playlist > .fa-play {
	background: #333;
	font-size: 0.35em;
	left: -4em;
	padding: 2px 4px;
	position: relative;
	vertical-align: top;
}
*/


/*==============  Footer ==============*/
footer {
	align-items: center;
	display: flex;
	height: 2.5em;
	margin-bottom: 2.5em; /* make room for the player */
}

footer .social {
	align-items: center;
	display: flex;
	width: 75%;
}
footer .social-icons a:not(:last-child) {
	border-right: 1px solid #555;
}

footer .copyright {
	display: flex;
	justify-content: flex-end;
	width: 25%;
}
footer .copyright-copy, footer .copyright-last-year {
	margin-right: 3px;
}

/**********************************************************************************
 * Any Phone screen
 **********************************************************************************/
@media screen and (max-width: 47.99em) {
	.header-container {
		clear: both;
		height: 64px;
		overflow: visible;
	}


/*============== Logo ==============*/
	.header-container .logo {
		border-radius: 0 42px 42px 42px;
		float: left;
		height: 80px;
		margin-left: -10px;
		margin-top: -8px;
		padding: 5px 4px 2px 10px;
		width: 80px;
	}

	.header-container .logo > img {
		height: 100%;
		width: 100%;
	}

	.header-container .logo-text {
		display: none;
	}


/*============== Buttons ==============*/
	.toggle-wrapper {
		float: right;
	}

	.toggle-wrapper > a {
		line-height: 64px;
		margin: 0 16px;
	}

	.toggle-wrapper > .selected {
		border-bottom: 2px solid;
		line-height: 62px;
	}

	.header-container .toggle-wrapper > a > .fa-chevron-down, .header-container .toggle-wrapper > a > .fa-chevron-up {
		display: none;
	}


/*============== Menus ==============*/
	.menu-language-choice > ul, .menu-main > ul {
		margin: 0;
		padding: 24px 0 12px 0;
	}

	.menu-playlist > ul {
		margin: 0;
		padding: 0 5px;
	}

	.menu li {
		margin: 0;
		padding: 0;
	}

	.menu li > a {
		display: block;
		font-size: 1.15em;
		padding: 12px 8px;
		text-align: left;
	}

	.menu-main li > a .icon {
		margin: 0 10px 0 6px;
	}

	.menu-main li > a .fa-chevron-down {
		font-size: 0.5em;
		vertical-align: middle;
	}


/*============== Content ==============*/
	.content {
		height: calc(100vh - 64px - 75px - 3em); /* 100 - header-height - padding - player */
		margin: 25px 0 50px;
	}


/*============== Player ==============*/
	.player {height: 3em;}
	.player .track-progress-bar-container, .player .player-controls .volume {display: none;}
	.player .fas:not(.fa-chevron-up) {font-size: 1.7em;}
	.player .track-title {margin-right: 5px;}

	.player .playlist, .player .player-controls a {padding: 0 10px;}


/*============== Footer ==============*/
	footer {margin-bottom: 3em;}
	footer .copyright-first-year, footer .copyright-ds, footer .social-label {display: none;}
	footer .social-icons a {
		font-size: 1.8em;
		padding: 0 10px;
	}
	footer .copyright {margin-right: 5px;}
}


/**********************************************************************************
 * Phone in landscape orientation or small tablet.
 * Just making use of the wider horizontal space.
 **********************************************************************************/
@media screen and (min-width: 35.5em) and (max-width: 47.99em) {
	.menu-mobile {margin-right: 16px;}

	.menu li > a {
		margin: 0 24px;
		padding: 10px 8px;
	}

	.content {
		height: calc(100vh - 64px - 75px - 2.5em); /* 100 - header-height - padding - player */
	}

	.player {height: 2.5em;}
	.player .playlist, .player .player-controls a {padding: 0 15px;}
	.player .track-progress-bar {display: none;}
	.player .track-progress-bar-container{
		display: inline-flex;
		padding: 0 10px;
	}
	.player .total-time::before {
		content: "/";
		margin: 5px;
	}

	footer {margin-bottom: 2.5em;}
	footer .social-icons a {padding: 0 15px;}
	footer .copyright{margin-right: 15px;}
	footer .copyright-first-year, footer .copyright-ds {display: inline;}
}
/* ... */

